# mmdfast-plus

./: README.md  pyproject.toml
data/: BRCTP.csv  heart_failure_clinical_records_dataset.csv
demo/: demo.py
src/mmdfast/: core.py  learner.py  predicates.py  reduction.py  rules.py
src/model/: ml.py
tests/: test_mmdfast.py
