[project]
name = "mmdfast"
version = "0.1.0"
authors = [
    { name = "Martin Eberlein", email = "martin.eberlein@hu-berlin.de" },
]
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "setuptools",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
]

notebooks = [
    "jupyterlab",
]

[tool.black]
line-length = 88
target-version = ['py312']